optimized Mappers for entities